# xiaozhi-nexus

./: .gitignore  config.example.yaml  pyproject.toml
src/xiaozhi_nexus/api/: ws.py
src/xiaozhi_nexus/commands/: app.py
src/xiaozhi_nexus/config/: __init__.py  loader.py  schema.py
src/xiaozhi_nexus/inferencers/: __init__.py  inferencer.py  utils.py
src/xiaozhi_nexus/inferencers/chat/: __init__.py  inferencer.py  text_normalization.py
src/xiaozhi_nexus/inferencers/stream_asr/: inferencer.py
src/xiaozhi_nexus/inferencers/tts/: __init__.py  inferencer.py  utils.py
src/xiaozhi_nexus/mcp/: bridge.py  get_date.py  tools_list.py
src/xiaozhi_nexus/runtime/: session.py
tests/plans/: mcp_and_iot_plan.md
tests/test_openai/: demo_tools_call_stream.py
