[project]
name = "xiaozhi-nexus"
version = "0.1.0"
description = ""
authors = [
    {name = "wangchenyu",email = "1542169671@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "openai (>=2.14.0,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fastapi (>=0.127.1,<0.128.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "typer (>=0.21.0,<0.22.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "numpy (<2.3)",
    "librosa (>=0.11.0,<0.12.0)",
    "scipy (<1.16)",
    "opuslib (>=3.0.1,<4.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)"
]

[project.scripts]
xiaozhi-nexus = "xiaozhi_nexus.commands.app:main"

[tool.poetry]
packages = [{include = "xiaozhi_nexus", from = "src"}]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
